--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
 
-<body>
-Hello world/
-</body>
+	<head>
+		<title> Project Name </title>
+		<meta charset="UTF-8">
+		<style>
+			h2 {
+				color: red;
+			}
+		</style>
+	</head>
+
+	<body>
+		<div>
+			<h2> About This Project </h2>
+			<p> ** project description ** </p>
+		</div>
+
+	</body>
 
 </html>
