--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
 	<head>
 		<title> Project Name </title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style.css">
+		<!--
+		Style directly in HTML
 		<style>
-			h2 {
-				color: red;
-			}
+			...
 		</style>
+		-->
 	</head>
 
 	<body>
 		<div>
+			<!--
+			Style of specific element
+			<h2 style="color: black">
+			-->
+			
+			<!--
+			<h2 class="name">
+			In style.css specify class by using .name
+			-->
 			<h2> About This Project </h2>
 			<p> ** project description ** </p>
 		</div>
-
 	</body>
-
 </html>
