--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title> Project Name </title>
 		<meta charset="UTF-8">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 		<!--
 		Style directly in HTML
@@ -14,18 +15,73 @@
 	</head>
 
 	<body>
-		<div>
-			<!--
-			Style of specific element
-			<h2 style="color: black">
-			-->
-			
-			<!--
-			<h2 class="name">
-			In style.css specify class by using .name
-			-->
-			<h2> About This Project </h2>
-			<p> ** project description ** </p>
+		<div class="header">
+			<div class="img-NCSU"></div>
+		</div>
+		<div class="img-trees"></div>
+		
+		<h1> Project Name </h1>
+		<nav>
+			<div class="wrapper">
+				<ul>
+					<li><a href="#">Project Description</a></li>
+					<li><a href="#">Background Information</a></li>
+					<li><a href="#">Project Objective</a></li>
+					<li><a href="#">Research Approach</a></li>
+					<li><a href="#">Contact Page</a></li>
+				</ul>
+			</div>
+		</nav>
+		<div class="wrapper">
+			<h2> Project Description </h2>
+		</div>
+		<div class="wrapper">
+			<h2> Background Information </h2>
+			<p> Water availability and quality are expected to be
+			adversely affected by adverse weather events and population
+			pressures. Therefore, the ability to regulate water
+			availability and improve water quality will become
+			increasingly important with continued human population
+			growth. One approach to regulating water availability and
+			improving water quality is the use of forest-water reuse
+			(FWR) systems. FWR systems are slow-rate irrigation systems
+			that treat municipal, industrial, and agricultural
+			wastewaters through infiltration into forest soils and
+			groundwater. </p>
+		</div>
+		<div class="wrapper">
+			<h2> Project Objective </h2>
+		</div>
+		<div class="wrapper">
+			<h2> Research Approach </h2>
+		</div>
+		<div class="wrapper">
+			<p> Visit our <a href="contact.html"> Contact Page </a> </p>
 		</div>
 	</body>
 </html>
+
+<!-- notes -->
+
+<!--
+Style of specific element
+<h2 style="color: black">
+-->
+			
+<!--
+<h2 class="name">
+In style.css specify class by using .name
+can have multiple class by using spaces "name spacing"
+If use class for div tag then we can do .name tag (e.g. .name p {})
+-->
+			
+<!--
+can style using ids (only one id per page) (e.g. name)
+only 1 id per HTML element
+use ids to link to stuff in same page ( <a href="#name"> </a> )
+-->
+
+<!--
+<a href="contact.html" target="_blank">
+to redirect to a new link in a new tab
+-->
