Fixed a bit more formatting
Still trying to figure out how to make more white space before each header.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 		</div>
 		<div class="img-trees"></div>
 		
-		<h1> Project Name </h1>
+		<div class="wrapper3">
+			<h1> Project Name </h1>
+		</div>
 		<nav>
-			<div class="wrapper">
+			<div class="wrapper2">
 				<ul>
 					<li><a href="#">Project Description</a></li>
 					<li><a href="#">Background Information</a></li>
