--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title> Project Name </title>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 		<!--
@@ -15,50 +16,64 @@
 	</head>
 
 	<body>
+	
 		<div class="header">
 			<div class="img-NCSU"></div>
 		</div>
+		
 		<div class="img-trees"></div>
 		
-		<div class="wrapper3">
-			<h1> Project Name </h1>
-		</div>
-		<nav>
-			<div class="wrapper2">
-				<ul>
-					<li><a href="#">Project Description</a></li>
-					<li><a href="#">Background Information</a></li>
-					<li><a href="#">Project Objective</a></li>
-					<li><a href="#">Research Approach</a></li>
-					<li><a href="#">Contact Page</a></li>
-				</ul>
+		
+		<div class="midbox">
+			
+			<div class="combine">
+				<h1> Project Name </h1>
 			</div>
-		</nav>
-		<div class="wrapper">
-			<h2> Project Description </h2>
+			
+			<nav>
+				<div class="combine2">
+					<ul>
+						<li><a href="#">Project Description</a></li>
+						<li><a href="#">Background Information</a></li>
+						<li><a href="#">Project Objective</a></li>
+						<li><a href="#">Research Approach</a></li>
+						<li><a href="#">Contact Us</a></li>
+					</ul>
+				</div>
+			</nav>
 		</div>
-		<div class="wrapper">
-			<h2> Background Information </h2>
-			<p> Water availability and quality are expected to be
-			adversely affected by adverse weather events and population
-			pressures. Therefore, the ability to regulate water
-			availability and improve water quality will become
-			increasingly important with continued human population
-			growth. One approach to regulating water availability and
-			improving water quality is the use of forest-water reuse
-			(FWR) systems. FWR systems are slow-rate irrigation systems
-			that treat municipal, industrial, and agricultural
-			wastewaters through infiltration into forest soils and
-			groundwater. </p>
-		</div>
-		<div class="wrapper">
-			<h2> Project Objective </h2>
-		</div>
-		<div class="wrapper">
-			<h2> Research Approach </h2>
-		</div>
-		<div class="wrapper">
-			<p> Visit our <a href="contact.html"> Contact Page </a> </p>
+		
+		
+		<div class="midbox">
+			<div class="wrapper">
+				<h2> Project Description </h2>
+				<p> This is a project. </p>
+			</div>
+			<div class="wrapper">
+				<h2> Background Information </h2>
+				<p> Water availability and quality are expected to be
+				adversely affected by adverse weather events and population
+				pressures. Therefore, the ability to regulate water
+				availability and improve water quality will become
+				increasingly important with continued human population
+				growth. One approach to regulating water availability and
+				improving water quality is the use of forest-water reuse
+				(FWR) systems. FWR systems are slow-rate irrigation systems
+				that treat municipal, industrial, and agricultural
+				wastewaters through infiltration into forest soils and
+				groundwater. </p>
+			</div>
+			<div class="wrapper">
+				<h2> Project Objective </h2>
+				<p> ... </p>
+			</div>
+			<div class="wrapper">
+				<h2> Research Approach </h2>
+				<p> ... </p>
+			</div>
+			<div class="wrapper">
+				<p class="footer"> For more information <a href="#"> Contact Us </a> </p>
+			</div>
 		</div>
 	</body>
 </html>
