--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</div>
 		
 		
-		<div class="midbox">
+		<div class="midbox2">
 			<div class="wrapper">
 				<h2> Project Description </h2>
 				<p> This is a project. </p>
