--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 			<div class="combine">
 				<h1> Project Name </h1>
 			</div>
-			
+		</div>
+		
+		<div class="midbox">		
 			<nav>
 				<div class="combine2">
 					<ul>
@@ -45,7 +47,7 @@
 		
 		
 		<div class="midbox2">
-			<div class="wrapper">
+			<div class="wrapper2">
 				<h2> Project Description </h2>
 				<p> This is a project. </p>
 			</div>
