--- a/index.html
+++ b/index.html
@@ -48,33 +48,33 @@
 	
 			<div id="Collaborators" class="tabcontent">
 				<div class="container">
-					<a href=#>Collaborator 1</a>
-					<p class="margins2"">Short excerpt about organization</p>
+					<a class="margins2" href=#>Collaborator 1</a>
+					<p class="margins3">Short excerpt about organization</p>
 				</div>
 				<div class="container">
-					<a href=#>Collaborator 2</a>
-					<p class="margins2">Short excerpt about organization</p>
+					<a class="margins2" href=#>Collaborator 2</a>
+					<p class="margins3">Short excerpt about organization</p>
 				</div>
 				<div class="container">
-					<a href=#>Collaborator 3</a>
-					<p class="margins2">Short excerpt about organization</p>
+					<a class="margins2" href=#>Collaborator 3</a>
+					<p class="margins3">Short excerpt about organization</p>
 				</div>				
 				<div class="container">
-					<a href=#>Etc.</a>
-					<p class="margins2">Short excerpt about organization</p>
+					<a class="margins2" href=#>Etc.</a>
+					<p class="margins3">Short excerpt about organization</p>
 				</div>
 			</div>
 			
 			<div id="Publications" class="tabcontent">
-				<div class="container"> 
-					<p class="margins2"> Publication 1 </p>
+				<div class="container">
+					<a class="margins2" href=#>Publication 1</a>
 				</div>
-				<div class="container"> 
-					<p class="margins2"> Publication 2 </p>
+				<div class="container">
+					<a class="margins2" href=# >Publication 2</a>
 				</div>
-				<div class="container"> 
-					<p class="margins2"> Publication 3 </p>
-				</div>
+				<div class="container">
+					<a class="margins2" href=#>Publication 3</a>
+				</div>		
 			</div>
 	
 			<div id="Contact Us" class="tabcontent">
