changed style box height
box height

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		
-		<div class="midbox2">
+		<div id="midbox2">
 	
 			<div id="Overview" class="tabcontent">
 				<div class="container">
