--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!--
 		Style directly in HTML
 		<style>
@@ -29,10 +30,10 @@
 		
 		<div class="wrapper">
 			<div class="tab">
-				<button class="tablinks" onclick="openTab(event, 'Overview')" id="defaultOpen"> Overview </button>
-				<button class="tablinks" onclick="openTab(event, 'Collaborators')"> Collaborators </button>
-				<button class="tablinks" onclick="openTab(event, 'Publications')"> Publications </button>
-				<button class="tablinks" onclick="openTab(event, 'Contact Us')"> Contact </button>
+				<button class="tablinks x" onclick="openTab(event, 'Overview')" id="defaultOpen"> Overview </button>
+				<button class="tablinks x" onclick="openTab(event, 'Collaborators')"> Collaborators </button>
+				<button class="tablinks x" onclick="openTab(event, 'Publications')"> Publications </button>
+				<button class="tablinks x" onclick="openTab(event, 'Contact Us')"> Contact </button>
 			</div>
 		</div>
 		
