Repurpose website for my data analysis portfolio

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 
 	<body>
 	
-		<div class="header img-NCSU"></div>
+		<div class="midbox">
+			<div class="combine">
+				<h1> Giovanni Budi Data Analytics Portfolio </h1>
+			</div>
+		</div>
 		
 		<div class="img-trees"></div>
 		
 		<div class="midbox">
 			<div class="combine">
-				<h1> Project Name </h1>
+				<h1>  </h1>
 			</div>
 		</div>
 		
