Update to use data analysis picture

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		
-		<div class="img-trees"></div>
+		<div class="img-data-analysis"></div>
 		
 		<div class="wrapper">
 			<div class="tab">
