Update tabs with portfolio names

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 		
 		<div class="wrapper">
 			<div class="tab">
-				<button class="tablinks x" onclick="openTab(event, 'Overview')" id="defaultOpen"> Overview </button>
-				<button class="tablinks x" onclick="openTab(event, 'Collaborators')"> Collaborators </button>
-				<button class="tablinks x" onclick="openTab(event, 'Publications')"> Publications </button>
-				<button class="tablinks x" onclick="openTab(event, 'Contact Us')"> Contact </button>
+				<button class="tablinks x" onclick="openTab(event, 'About Me')" id="defaultOpen"> About Me </button>
+				<button class="tablinks x" onclick="openTab(event, 'Work Experience')" id="defaultOpen"> Work Experience </button>
+				<button class="tablinks x" onclick="openTab(event, 'Data Visualization Projects')"> Data Visualization Projects </button>
+				<button class="tablinks x" onclick="openTab(event, 'Data Modeling Projects')"> Data Modeling Projects </button>
 			</div>
 		</div>
 		
 		<div id="midbox2">
 	
-			<div id="Overview" class="tabcontent">
+			<div id="About Me" class="tabcontent">
 				<div class="container">
 					<p class="margins1">May indulgence difficulty ham can put especially. Bringing remember for supplied her why was confined. Middleton principle did she procuring extensive believing add. Weather adapted prepare oh is calling. These wrong of he which there smile to my front. He fruit oh enjoy it of whose table. Cultivated occasional old her unpleasing unpleasant. At as do be against pasture covered viewing started. Enjoyed me settled mr respect no spirits civilly.</p>
 					<p class="margins1">Advanced extended doubtful he he blessing together. Introduced far law gay considered frequently entreaties difficulty. Eat him four are rich nor calm. By an packages rejoiced exercise. To ought on am marry rooms doubt music. Mention entered an through company as. Up arrived no painful between. It declared is prospect an insisted pleasure.</p>
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 	
-			<div id="Collaborators" class="tabcontent">
+			<div id="Work Experience" class="tabcontent">
 				<div class="container">
 					<a class="margins2" href=#>Collaborator 1</a>
 					<p class="margins3">Short excerpt about organization</p>
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			
-			<div id="Publications" class="tabcontent">
+			<div id="Data Visualization Projects" class="tabcontent">
 				<div class="container">
 					<a class="margins2" href=#>Publication 1</a>
 				</div>
@@ -76,7 +76,7 @@
 				</div>		
 			</div>
 	
-			<div id="Contact Us" class="tabcontent">
+			<div id="Data Modeling Projects" class="tabcontent">
 				    <div class="container">
 						<label for="fname">Name</label>
 						<input type="text" id="" name="" placeholder="Enter your name">
