Update tab names

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<div class="tab">
 				<button class="tablinks x" onclick="openTab(event, 'About Me')" id="defaultOpen"> About Me </button>
 				<button class="tablinks x" onclick="openTab(event, 'Work Experience')" id="defaultOpen"> Work Experience </button>
-				<button class="tablinks x" onclick="openTab(event, 'Data Visualization Projects')"> Data Visualization Projects </button>
-				<button class="tablinks x" onclick="openTab(event, 'Data Modeling Projects')"> Data Modeling Projects </button>
+				<button class="tablinks x" onclick="openTab(event, 'Data Visualization')"> Data Visualization </button>
+				<button class="tablinks x" onclick="openTab(event, 'Data Modeling')"> Data Modeling </button>
 			</div>
 		</div>
 		
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			
-			<div id="Data Visualization Projects" class="tabcontent">
+			<div id="Visualization Projects" class="tabcontent">
 				<div class="container">
 					<a class="margins2" href=#>Publication 1</a>
 				</div>
@@ -76,7 +76,7 @@
 				</div>		
 			</div>
 	
-			<div id="Data Modeling Projects" class="tabcontent">
+			<div id="Modeling Projects" class="tabcontent">
 				    <div class="container">
 						<label for="fname">Name</label>
 						<input type="text" id="" name="" placeholder="Enter your name">
