Add about me description

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 	
 			<div id="About Me" class="tabcontent">
 				<div class="container">
-					<p class="margins1">May indulgence difficulty ham can put especially. Bringing remember for supplied her why was confined. Middleton principle did she procuring extensive believing add. Weather adapted prepare oh is calling. These wrong of he which there smile to my front. He fruit oh enjoy it of whose table. Cultivated occasional old her unpleasing unpleasant. At as do be against pasture covered viewing started. Enjoyed me settled mr respect no spirits civilly.</p>
-					<p class="margins1">Advanced extended doubtful he he blessing together. Introduced far law gay considered frequently entreaties difficulty. Eat him four are rich nor calm. By an packages rejoiced exercise. To ought on am marry rooms doubt music. Mention entered an through company as. Up arrived no painful between. It declared is prospect an insisted pleasure.</p>
-					<p class="margins1">An an valley indeed so no wonder future nature vanity. Debating all she mistaken indulged believed provided declared. He many kept on draw lain song as same. Whether at dearest certain spirits is entered in to. Rich fine bred real use too many good. She compliment unaffected expression favourable any. Unknown chiefly showing to conduct no. Hung as love evil able to post at as. </p>
+					<p class="margins1">Hi! I am Giovanni Budi and a data-driven problem solver with over 7 years of experience across business analytics, data engineering, quality assurance, and project management. I hold a Master’s in Business Analytics from the University of South Carolina and a Bachelor’s in Computer Science and Applied Mathematics from NC State University.</p>
+					<p class="margins1">I’m passionate about using data to drive better decision-making, uncover insights, and build solutions that create real business value. Whether it's cleaning messy datasets, building predictive models, or streamlining workflows, I thrive at the intersection of data, strategy, and impact.</p>
 				</div>
 			</div>
 	
