Add graduation headshot to about me

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		<div id="midbox2">
 	
 			<div id="About Me" class="tabcontent">
+				<div class="img-graduation-headshot"></div>
 				<div class="container">
 					<p class="margins1">Hi! I am Giovanni Budi and a data-driven problem solver with over 7 years of experience across business analytics, data engineering, quality assurance, and project management. I hold a Master’s in Business Analytics from the University of South Carolina and a Bachelor’s in Computer Science and Applied Mathematics from NC State University.</p>
 					<p class="margins1">I’m passionate about using data to drive better decision-making, uncover insights, and build solutions that create real business value. Whether it's cleaning messy datasets, building predictive models, or streamlining workflows, I thrive at the intersection of data, strategy, and impact.</p>
