Update template with personal projects

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="wrapper">
 			<div class="tab">
 				<button class="tablinks x" onclick="openTab(event, 'About Me')" id="defaultOpen"> About Me </button>
-				<button class="tablinks x" onclick="openTab(event, 'Work Experience')" id="defaultOpen"> Work Experience </button>
+				<!-- <button class="tablinks x" onclick="openTab(event, 'Work Experience')" id="defaultOpen"> Work Experience </button> -->
 				<button class="tablinks x" onclick="openTab(event, 'Data Visualization')"> Data Visualization </button>
 				<button class="tablinks x" onclick="openTab(event, 'Data Modeling')"> Data Modeling </button>
 			</div>
@@ -65,34 +65,40 @@
 				</div>
 			</div>
 			
-			<div id="Visualization Projects" class="tabcontent">
+			<div id="Data Visualizations" class="tabcontent">
 				<div class="container">
-					<a class="margins2" href=#>Publication 1</a>
+					<a class="margins2">University of South Carolina Athletics</a>
+					<p class="margins3">Short excerpt about organization</p>
+					<a class="margins3" href=#>Collaborator 1</a>
 				</div>
 				<div class="container">
-					<a class="margins2" href=# >Publication 2</a>
+					<a class="margins2">Chicago Traffic Crash Data Business Case</a>
+					<p class="margins3">Short excerpt about organization</p>
+					<a class="margins3" href=#>Collaborator 1</a>
 				</div>
 				<div class="container">
-					<a class="margins2" href=#>Publication 3</a>
-				</div>		
+					<a class="margins2">Chicago Traffic Crash Data Business Case</a>
+					<p class="margins3">Short excerpt about organization</p>
+					<a class="margins3" href=#>Collaborator 1</a>
+				</div>					
 			</div>
 	
-			<div id="Modeling Projects" class="tabcontent">
-				    <div class="container">
-						<label for="fname">Name</label>
-						<input type="text" id="" name="" placeholder="Enter your name">
-						<br>
-						<label for="lname">Email</label>
-						<input type="text" id="" name="" placeholder="Enter your email address">
-						<br>
-						<label for="lname">Subject</label>
-						<input type="text" id="" name="" placeholder="Enter the subject matter">
-						<br>
-						<label for="lname">Message</label>
-						<br>
-						<textarea id="" name="" placeholder="Type your message" style="height:200px"></textarea>
-						<input type="submit" value="Submit">
-					</div>
+			<div id="Data Modeling" class="tabcontent">
+				<div class="container">
+					<a class="margins2">University of South Carolina Athletics</a>
+					<p class="margins3">Short excerpt about organization</p>
+					<a class="margins3" href=#>Collaborator 1</a>
+				</div>
+				<div class="container">
+					<a class="margins2">ISIC 2024 - Skin Cancer Detection</a>
+					<p class="margins3">Short excerpt about organization</p>
+					<a class="margins3" href=#>Collaborator 1</a>
+				</div>
+				<div class="container">
+					<a class="margins2">HCT Survival Predictions</a>
+					<p class="margins3">Short excerpt about organization</p>
+					<a class="margins3" href=#>Collaborator 1</a>
+				</div>		
 			</div>
 		
 		</div>
