Fix bug with tab names

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 			
-			<div id="Data Visualizations" class="tabcontent">
+			<div id="Data Visualization" class="tabcontent">
 				<div class="container">
 					<a class="margins2">University of South Carolina Athletics</a>
 					<p class="margins3">Short excerpt about organization</p>
