--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
 			<div id="Data Visualization" class="tabcontent">
 				<div class="container">
 					<h2>Reducing “No-Shows” at UofSC Athletic Events</h2>
-					<p>
+					<p class="margins3">
 						Not all ticket purchasers attend the games, leading to “no-shows” and a decline in true attendance.
 						These no-shows result in empty seats, a diminished atmosphere, lost concession revenue, and a weaker overall fan experience.
 						UofSC Athletics sought to identify the factors driving attendance behavior and reduce future no-shows.
 					</p>
-					<p>
+					<p class="margins3">
 						To support this goal, I developed a predictive model (<a href="#model-portfolio">see the Model Portfolio for code</a>) to estimate the likelihood
 						that a ticket holder would attend a given game. The model’s output—predicted probabilities—was implemented directly into our dashboard,
 						where we visualized high-risk tickets on a geographic heat map.
 					</p>
-					<p>This approach allowed us to:</p>
-					<ul>
+					<p class="margins3">This approach allowed us to:</p>
+					<ul class="margins3">
 						<li>Identify characteristics of fans most likely to skip games</li>
 						<li>Quantify the key drivers of attendance</li>
 						<li>Target specific ticket holders for engagement strategies</li>
 					</ul>
-					<p>
+					<p class="margins3">
 						Ultimately, this project enabled data-driven decision-making to improve attendance and enhance the in-stadium experience.
 					</p>
 					<a class="margins3" href=#>Link</a>
