Update link to refer to uofsc pdf

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<p class="margins3">
 						Ultimately, this project enabled data-driven decision-making to improve attendance and enhance the in-stadium experience.
 					</p>
-					<a class="margins3" href=#>Link</a>
+					<a class="margins3" href="pdf/UofSC Athletics Practicum Poster.pdf" target="_blank">Link</a>
 				</div>
 				<div class="container">
 					<a class="margins2">Chicago Traffic Crash Data Business Case</a>
