--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						UofSC Athletics sought to identify the factors driving attendance behavior and reduce future no-shows.
 					</p>
 					<p class="margins3">
-						To support this goal, I developed a predictive model (<a href="#model-portfolio">see the Model Portfolio for code</a>) to estimate the likelihood
+						To support this goal, a team and I developed a predictive model (see the Model Portfolio tab for more details) to estimate the likelihood
 						that a ticket holder would attend a given game. The model’s output—predicted probabilities—was implemented directly into our dashboard,
 						where we visualized high-risk tickets on a geographic heat map.
 					</p>
@@ -87,7 +87,7 @@
 					<p class="margins3">
 						Ultimately, this project enabled data-driven decision-making to improve attendance and enhance the in-stadium experience.
 					</p>
-					<a class="margins3" href="pdf/UofSC Athletics Practicum Poster.pdf" target="_blank">Link</a>
+					<a class="margins3" href="pdf/UofSC Athletics Practicum Poster.pdf" target="_blank">Project Poster</a>
 				</div>
 				<div class="container">
 					<a class="margins2">Chicago Traffic Crash Data Business Case</a>
