--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						This dashboard was created to identify the when, where, and why of crashes, providing insights that help develop strategies to decrease both the frequency and severity of traffic incidents.
 					</p>
 
-					<p class="margin3">
+					<p class="margins3">
 						To achieve this, I created a series of visualizations that analyze crash trends over time, categorize crash types and severity, and display crash density through an interactive heat map by police beat. 
 						Users can apply filters to examine crashes based on severity, time frame, and the presence of nearby traffic control devices. These filters provide deeper insights into contributing factors and high-risk 
 						areas, allowing for a more targeted approach to understanding and mitigating traffic incidents.
