Update with spotify dashboard

--- a/index.html
+++ b/index.html
@@ -104,9 +104,13 @@
 					<a class="margins3" href="https://app.powerbi.com/view?r=eyJrIjoiYTAxZDVkYWItMTQyMy00ZGU3LWIwMzctODhjYjIzODgzZTIxIiwidCI6IjRiMmE0YjE5LWQxMzUtNDIwZS04YmIyLWIxY2QyMzg5OThjYyIsImMiOjF9&pageName=061e088039c043d83b99">City of Chicago Traffic Crashes 2024 Annual Report</a>
 				</div>
 				<div class="container">
-					<a class="margins2">Chicago Traffic Crash Data Business Case</a>
-					<p class="margins3">Short excerpt about organization</p>
-					<a class="margins3" href=#>Collaborator 1</a>
+					<h2>Spotify: Exploring Music Trends</h2>
+					<p class="margin3">
+						This interactive Power BI dashboard provides deep insights into music trends using Spotify data from 1999 to 2020. Featuring analytics on song popularity, energy, 
+						danceability, and more, the report empowers executives and analysts to explore evolving listener preferences, influential musical attributes, and top-performing genres and artists.
+					</p>
+					<a class="margins3" href="https://app.powerbi.com/view?r=eyJrIjoiMTlkNTBjNjYtZDU3Zi00NmRkLWFkNGItNjg2MTQ0MTdiNjg0IiwidCI6IjRiMmE0YjE5LWQxMzUtNDIwZS04YmIyLWIxY2QyMzg5OThjYyIsImMiOjF9&pageName=73441d83b5c5fed0af54">Spotify Dashboard</a>
+					<a class="margins3" href="pdf/Key Trends in Popular Music (2000–2019).pdf">Spotify Dashboard User Guide</a>
 				</div>					
 			</div>
 	
