--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				</div>
 				<div class="container">
 					<h2>Spotify: Exploring Music Trends</h2>
-					<p class="margin3">
+					<p class="margins3">
 						This interactive Power BI dashboard provides deep insights into music trends using Spotify data from 1999 to 2020. Featuring analytics on song popularity, energy, 
 						danceability, and more, the report empowers executives and analysts to explore evolving listener preferences, influential musical attributes, and top-performing genres and artists.
 					</p>
