Add line break in between spotify links

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						This interactive Power BI dashboard provides deep insights into music trends using Spotify data from 1999 to 2020. Featuring analytics on song popularity, energy, 
 						danceability, and more, the report empowers executives and analysts to explore evolving listener preferences, influential musical attributes, and top-performing genres and artists.
 					</p>
-					<a class="margins3" href="https://app.powerbi.com/view?r=eyJrIjoiMTlkNTBjNjYtZDU3Zi00NmRkLWFkNGItNjg2MTQ0MTdiNjg0IiwidCI6IjRiMmE0YjE5LWQxMzUtNDIwZS04YmIyLWIxY2QyMzg5OThjYyIsImMiOjF9&pageName=73441d83b5c5fed0af54">Spotify Dashboard</a>
+					<a class="margins3" href="https://app.powerbi.com/view?r=eyJrIjoiMTlkNTBjNjYtZDU3Zi00NmRkLWFkNGItNjg2MTQ0MTdiNjg0IiwidCI6IjRiMmE0YjE5LWQxMzUtNDIwZS04YmIyLWIxY2QyMzg5OThjYyIsImMiOjF9&pageName=73441d83b5c5fed0af54">Spotify Dashboard</a><br>
 					<a class="margins3" href="pdf/Key Trends in Popular Music (2000–2019).pdf">Spotify Dashboard User Guide</a>
 				</div>					
 			</div>
