Update spotify text to use first person

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
 				<div class="container">
 					<h2>Spotify: Exploring Music Trends</h2>
 					<p class="margins3">
-						This interactive Power BI dashboard provides deep insights into music trends using Spotify data from 1999 to 2020. Featuring analytics on song popularity, energy, 
-						danceability, and more, the report empowers executives and analysts to explore evolving listener preferences, influential musical attributes, and top-performing genres and artists.
+						I created this interactive Power BI dashboard to explore the when, where, and why of evolving music trends, using Spotify data from 1999 to 2020. 
+						Through a series of visualizations, the report analyzes changes in song popularity, energy, danceability, and other key musical attributes, while highlighting top genres and artists. 
+						Users can apply filters to examine trends by year, genre, and popularity level, uncovering insights into shifting listener preferences and the attributes that define successful tracks over time.
 					</p>
 					<a class="margins3" href="https://app.powerbi.com/view?r=eyJrIjoiMTlkNTBjNjYtZDU3Zi00NmRkLWFkNGItNjg2MTQ0MTdiNjg0IiwidCI6IjRiMmE0YjE5LWQxMzUtNDIwZS04YmIyLWIxY2QyMzg5OThjYyIsImMiOjF9&pageName=73441d83b5c5fed0af54">Spotify Dashboard</a><br>
 					<a class="margins3" href="pdf/Key Trends in Popular Music (2000–2019).pdf">Spotify Dashboard User Guide</a>
