--- a/index.html
+++ b/index.html
@@ -117,20 +117,38 @@
 	
 			<div id="Data Modeling" class="tabcontent">
 				<div class="container">
-					<a class="margins2">University of South Carolina Athletics</a>
-					<p class="margins3">Short excerpt about organization</p>
-					<a class="margins3" href=#>Collaborator 1</a>
+					<h2>Reducing “No-Shows” at UofSC Athletic Events</h2>
+					<p class="margins3">
+						Not all ticket purchasers attend the games, leading to “no-shows” and a decline in true attendance.
+						These no-shows result in empty seats, a diminished atmosphere, lost concession revenue, and a weaker overall fan experience.
+						UofSC Athletics sought to identify the factors driving attendance behavior and reduce future no-shows.
+					</p>
+					<p class="margins3">
+						To support this goal, a team and I developed a predictive model (see the Model Portfolio tab for more details) to estimate the likelihood
+						that a ticket holder would attend a given game. The model was implemented directly into our dashboard,
+						where we visualized high-risk tickets on a geographic heat map.
+					</p>
+					<p class="margins3">This approach allowed us to:</p>
+					<ul class="margins4">
+						<li>Identify characteristics of fans most likely to skip games</li>
+						<li>Quantify the key drivers of attendance</li>
+						<li>Target specific ticket holders for engagement strategies</li>
+					</ul>
+					<p class="margins3">
+						Ultimately, this project enabled data-driven decision-making to improve attendance and enhance the in-stadium experience.
+					</p>
+					<a class="margins3" href="https://github.com/giometry/UofSCAthletics" target="_blank">GitHub Repository for Model Generation Code</a>
 				</div>
+
 				<div class="container">
-					<a class="margins2">ISIC 2024 - Skin Cancer Detection</a>
-					<p class="margins3">Short excerpt about organization</p>
-					<a class="margins3" href=#>Collaborator 1</a>
+					<h2>Identifying Skin Cancer Detection - ISIC 2024</h2>
+					<p class="margins3">
+						Test.
+					</p>
+
+					<a class="margins3" href="pdf/SkinCancerDetectionFinal.pdf" target="_blank">Skin Cancer Detection Paper</a>
+					<a class="margins3" href="https://github.com/csce585-mlsystems/skin-cancer-detection" target="_blank">GitHub Repository for Model Generation Code</a>
 				</div>
-				<div class="container">
-					<a class="margins2">HCT Survival Predictions</a>
-					<p class="margins3">Short excerpt about organization</p>
-					<a class="margins3" href=#>Collaborator 1</a>
-				</div>		
 			</div>
 		
 		</div>
