Add ISIC project description

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<div class="tab">
 				<button class="tablinks x" onclick="openTab(event, 'About Me')" id="defaultOpen"> About Me </button>
 				<!-- <button class="tablinks x" onclick="openTab(event, 'Work Experience')" id="defaultOpen"> Work Experience </button> -->
-				<button class="tablinks x" onclick="openTab(event, 'Data Visualization')"> Data Visualization </button>
-				<button class="tablinks x" onclick="openTab(event, 'Data Modeling')"> Data Modeling </button>
+				<button class="tablinks x" onclick="openTab(event, 'Data Visualization')"> Visualization </button>
+				<button class="tablinks x" onclick="openTab(event, 'Data Modeling')"> Modeling </button>
 			</div>
 		</div>
 		
@@ -143,10 +143,12 @@
 				<div class="container">
 					<h2>Identifying Skin Cancer Detection - ISIC 2024</h2>
 					<p class="margins3">
-						Test.
+						This project addresses the critical need for accessible skin cancer diagnostics in underserved regions by developing a deep learning-based detection system that works with smartphone-quality images. 
+						Leveraging the ISIC SLICE-3D dataset and state-of-the-art EfficientNet architectures, we evaluate the impact of image quality on classification performance. Through transfer learning from high-resolution ISIC 2019 data, 
+						we demonstrate how advanced AI can adapt to low-resource environments without compromising diagnostic accuracy, paving the way for broader, more equitable access to early skin cancer detection tools.
 					</p>
 
-					<a class="margins3" href="pdf/SkinCancerDetectionFinal.pdf" target="_blank">Skin Cancer Detection Paper</a>
+					<a class="margins3" href="pdf/SkinCancerDetectionFinal.pdf" target="_blank">Skin Cancer Detection Paper</a><br>
 					<a class="margins3" href="https://github.com/csce585-mlsystems/skin-cancer-detection" target="_blank">GitHub Repository for Model Generation Code</a>
 				</div>
 			</div>
