--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 					<p class="margins3">
 						Ultimately, this project enabled data-driven decision-making to improve attendance and enhance the in-stadium experience.
 					</p>
+					<a class="margins3" href="pdf/UofSC Athletics Practicum Poster.pdf" target="_blank">University of South Carolina Athletics Poster</a><br>
 					<a class="margins3" href="https://github.com/giometry/UofSCAthletics" target="_blank">GitHub Repository for Model Generation Code</a>
 				</div>
 
