Add subtitle to work experience

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 			<div id="Work Experience" class="tabcontent">
 				<div class="container">
 					<h2>University of South Carolina - Athletics</h2>
+					<h3 class="margins3 subtitle"> Research Analyst – Used Python to analyze ticket sales and fan behavior </h3>
 					<p class="margins3">
 						At University of South Carolina Athletics Department, I leveraged Python and machine learning to analyze ticket sales and attendance data, building predictive models to estimate the likelihood of fan no-shows. I identified key drivers of attendance such as opponent strength, ticket type, and purchasing behavior. To effectively communicate risk levels to stakeholders, I implemented the model within Power BI, using geographic heat maps to visually highlight high-risk ticket buyer segments by location. These insights assisted in developing targeted strategies including loyalty rewards programs and resale incentives, helping to reduce no-show rates, enhance fan engagement, and support data-driven decisions across marketing and operations.
 					</p>
