Update work experience with date

--- a/index.html
+++ b/index.html
@@ -49,31 +49,36 @@
 			<div id="Work Experience" class="tabcontent">
 				<div class="container">
 					<h2>University of South Carolina - Athletics</h2>
-					<h3 class="margins3 subtitle"> Research Analyst – Used Python to analyze ticket sales and fan behavior </h3>
+					<h3 class="margins3 subtitle"> Research Analyst – Built predictive models to reduce no-shows and improve fan engagement using Python and Power BI </h3>
+					<p class="margins3"><strong>January 2025 – Present</strong></p>
 					<p class="margins3">
 						At University of South Carolina Athletics Department, I leveraged Python and machine learning to analyze ticket sales and attendance data, building predictive models to estimate the likelihood of fan no-shows. I identified key drivers of attendance such as opponent strength, ticket type, and purchasing behavior. To effectively communicate risk levels to stakeholders, I implemented the model within Power BI, using geographic heat maps to visually highlight high-risk ticket buyer segments by location. These insights assisted in developing targeted strategies including loyalty rewards programs and resale incentives, helping to reduce no-show rates, enhance fan engagement, and support data-driven decisions across marketing and operations.
 					</p>
 				</div>
 				<div class="container">
 					<h2>ATI Specialty Materials</h2>
+					<h3 class="margins3 subtitle"> Data Scientist – Led cross-functional analytics initiatives using Python, SQL, Power BI, JMP, and Databricks to improve operations and quality </h3>
 					<p class="margins3">
 						During my 5 years at ATI Specialty Materials, I led and contributed to numerous cross-functional data initiatives that enhanced operational efficiency and supported strategic business goals. I collaborated with finance teams to define reporting requirements and built dynamic dashboards in Power BI and ThingWorx, improving real-time visibility into financial and operational performance. Working with DBAs, I developed and maintained ETL pipelines using SQL and Databricks, ensuring reliable data flow across systems. I partnered with engineers to conduct analytical investigations using Python and JMP, and worked with the quality assurance team to create predictive models that identified potential product defects. These efforts collectively drove data-informed decision-making, reduced process variability, and strengthened alignment across technical and business units.
 					</p>
 				</div>
 				<div class="container">
 					<h2>Siemens</h2>
+					<h3 class="margins3 subtitle"> Software Developer – Built a customizable data dashboard application using Django, Selenium, and Python </h3>
 					<p class="margins3">
 						As a software developer, I developed a dashboard generator application using the Django framework in Python, enabling the visualization of any data set within Siemens' database based on user-defined parameters such as tables, charts, and filters. To ensure the application’s functionality, I wrote comprehensive unit tests using Python’s unit test framework and Selenium for automated testing. I also created a user guide to help clients navigate the application and a developer guide to facilitate future development. Throughout the software development cycle, I collaborated closely with clients, gathering requirements, designing the application, and iterating through implementation and testing phases to ensure a seamless user experience and robust performance.
 					</p>
 				</div>
 				<div class="container">
 					<h2>North Carolina State University</h2>
+					<h3 class="margins3 subtitle"> Research Assistant – Automated data workflows with Excel VBA to accelerate research analysis and reporting </h3>
 					<p class="margins3">
 						During my 1.5 years as a Research Assistant at North Carolina State University, I collaborated with multiple research teams to support their data analysis needs and contribute to the development of detailed reports and presentations. I designed and implemented Excel VBA scripts to automate data extraction and consolidation workflows, reducing manual processing time by 99%. This efficiency boost allowed teams to focus more on research insights and improved the overall quality and consistency of project deliverables.
 					</p>
 				</div>
 				<div class="container">
 					<h2>Alpek Polyester</h2>
+					<h3 class="margins3 subtitle"> IT Engineer – Built internal tools and improved SSRS reporting systems to enhance data reliability and operational efficiency </h3>
 					<p class="margins3">
 						As an engineer, I led efforts to develop and enhance data storage architecture, methods, and procedures across the organization to improve data accessibility and reliability. I designed and built a hardware loaning application that streamlined the electronics loaning process across all plant sites, reducing manual tracking and improving accountability. Additionally, I enhanced SQL Server Reporting Services (SSRS) reports by incorporating data validation checks and user-friendly error messaging, which significantly improved user experience and reduced reporting errors.
 					</p>
