Add skill section to about me

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="wrapper">
 			<div class="tab">
 				<button class="tablinks x" onclick="openTab(event, 'About Me')" id="defaultOpen"> About Me </button>
-				<button class="tablinks x" onclick="openTab(event, 'Work Experience')" id="defaultOpen"> Work Experience </button>
+				<button class="tablinks x" onclick="openTab(event, 'Work Experience')" id="defaultOpen"> Experience </button>
 				<button class="tablinks x" onclick="openTab(event, 'Data Visualization')"> Visualization </button>
 				<button class="tablinks x" onclick="openTab(event, 'Data Modeling')"> Modeling </button>
 			</div>
@@ -43,6 +43,15 @@
 					
 					<p class="margins1">Hi! I am Giovanni Budi and a data-driven problem solver with over 7 years of experience across business analytics, data engineering, quality assurance, and project management. I hold a Master’s in Business Analytics from the University of South Carolina and a Bachelor’s in Computer Science and Applied Mathematics from NC State University.</p>
 					<p class="margins1">I’m passionate about using data to drive better decision-making, uncover insights, and build solutions that create real business value. Whether it's cleaning messy datasets, building predictive models, or streamlining workflows, I thrive at the intersection of data, strategy, and impact.</p>
+					
+					<h3>Skills</h3>
+					<ul>
+						<li><strong>General Applications:</strong> Excel, Word, PowerPoint, Outlook</li>
+						<li><strong>Software Tools:</strong> Git, Jenkins, Junit, Waterfall and Agile methodologies</li>
+						<li><strong>Data Analysis:</strong> Pandas, Scipy, Numpy, Matplotlib, Keras, Scikit-learn</li>
+						<li><strong>Programming:</strong> Python, R, SAS, JMP/JSL, SQL, Java, JavaScript, VBA</li>
+						<li><strong>Database:</strong> SQL Server, Oracle, MongoDB</li>
+					</ul>
 				</div>
 			</div>
 	
