Add seperator in header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 		<div class="midbox">
 			<div class="combine">
-				<h1> Giovanni Budi Data Analytics Portfolio </h1>
+				<h1> Giovanni Budi | Data Analytics Portfolio </h1>
 			</div>
 		</div>
 		
