--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 					<p class="margins3">
 						Ultimately, this project enabled data-driven decision-making to improve attendance and enhance the in-stadium experience.
 					</p>
-					<a class="margins3" href="pdf/UofSC Athletics Practicum Poster.pdf" target="_blank">University of South Carolina Athletics Poster</a>
-					<a class="margins3" href="pdf/WomenBasketballDashboard.pdf" target="_blank">Women Basketball Dashboard</a>
-					<a class="margins3" href="pdf/MenBasketballDashboard.pdf" target="_blank">Men Basketball Dashboard</a>
-					<a class="margins3" href="pdf/BaseballDashboard.pdf" target="_blank">Baseball Dashboard</a>
+					<a class="margins3" href="pdf/UofSC Athletics Practicum Poster.pdf" target="_blank">University of South Carolina Athletics Poster</a><br>
+					<a class="margins3" href="pdf/WomenBasketballDashboard.pdf" target="_blank">Women Basketball Dashboard</a><br>
+					<a class="margins3" href="pdf/MenBasketballDashboard.pdf" target="_blank">Men Basketball Dashboard</a><br>
+					<a class="margins3" href="pdf/BaseballDashboard.pdf" target="_blank">Baseball Dashboard</a><br>
 					<a class="margins3" href="pdf/FootballDashboard.pdf" target="_blank">Football Dashboard</a>
 				</div>
 				<div class="container">
